--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "",
+  "name": "my-test-astro-project",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
-    "preview": "astro preview",
-    "preview:cf": "wrangler pages dev ./dist",
+    "preview": "wrangler pages dev ./dist",
     "astro": "astro"
   },
   "dependencies": {
